--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   ],
   "scripts": {
     "analyze": "turbo run analyze",
+    "rsdoctor": "turbo run rsdoctor",
     "build": "turbo run build",
     "build:local": "cross-env-shell \"HOST_BASE_URL=http://localhost:${REMOTES_PORT:-3333}/ turbo run build\"",
     "dev": "turbo run dev",
@@ -29,8 +30,8 @@
     "ci": "bun run types:build && bun run typecheck && bun run test:ci && bun run biome:check",
     "clean": "rimraf apps/*/node_modules packages/*/node_modules bun.lock node_modules",
     "prepare": "husky",
-    "preview": "cross-env-shell \"SHARED_HOST_BASE_URL=http://localhost:8081/ HEADER_PAGES_HOST_BASE_URL=http://localhost:8082/ turbo run build --force && bun run preview:serve\"",
-    "preview:serve": "concurrently -n shell,shared,header -c green,magenta,cyan \"cd apps/shell && bun run serve:prod\" \"cd packages/shared && bun run serve:prod\" \"cd apps/header-pages && bun run serve:prod\""
+    "preview": "cross-env-shell \"SHELL_PREVIEW_PORT=8080 SHARED_PREVIEW_PORT=8081 HEADER_PAGES_PREVIEW_PORT=8082 SHARED_HOST_BASE_URL=http://localhost:8081/ HEADER_PAGES_HOST_BASE_URL=http://localhost:8082/ turbo run build --force && bun run preview:serve\"",
+    "preview:serve": "cross-env SHELL_PREVIEW_PORT=8080 SHARED_PREVIEW_PORT=8081 HEADER_PAGES_PREVIEW_PORT=8082 concurrently -n shell,shared,header -c green,magenta,cyan \"cd apps/shell && bun run serve:prod\" \"cd packages/shared && bun run serve:prod\" \"cd apps/header-pages && bun run serve:prod\""
   },
   "devDependencies": {
     "dotenv-cli": "^7.4.2",
