--- a/bunfig.toml
+++ b/bunfig.toml
@@ -34,7 +34,8 @@ coveragePathIgnorePatterns = [
 preload = [
 	"@config/bun-test-config/happydom.ts",
 	"@config/bun-test-config/setup-tests.ts",
-	"@config/bun-test-config/testing-library.ts"
+	"@config/bun-test-config/testing-library.ts",
+  "./packages/@config/bun-test-config/__mocks__/shared-modules.ts"
 ]
 
 [build]
