--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-query": "^5.62.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-error-boundary": "^6.0.0",
     "react-helmet": "^6.1.0",
     "react-router": "^7.8.1"
   },
